# agent-sudo

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  INSTALL.md  README.md  SKILL.md  compile_commands.json  functional_gui_test.py  resources.qrc  test_real_world.sh  x11_key.py
agent-sudo/: e2e_test.py  test.sh
docs/superpowers/plans/: 2026-06-24-theme-icons-plan.md
docs/superpowers/specs/: 2026-06-24-theme-icons-design.md
lang/: de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json
src/: agent-sudo  main.cc  main.py
src/gui/: command_card.cc  command_card.h  executor.cc  executor.h  icon.cc  icon.h  icon_codes.h  queue_io.cc  queue_io.h  ring_countdown.cc  ring_countdown.h  sound.cc  sound.h  theme_transition.cc  theme_transition.h  tr.h
src/gui/creeper-qt/: creeper-qt.hh
src/gui/creeper-qt/utility/: material-icon.hh
